grammar.txt
expr        : comp ((keywordXD:I|keywordXD:LUB) comp-expr)*
comp-expr   : NIE comp-expr
            : arith-expr ((eeXD|ltXD|gtXD|lteXD|gteXD) arith-expr )*
arith-expr  : term((plusXD|minusXD) term)*
term        : factor ((mulXD|divXD) factor)*
factor      : (plusXD|minusXD) factor | power
power       : atom (powerXD factor)*
atom        : integerXD|floatXD|identifierXD|stringXD
            : lparenXD expr rparenXD
            : list-expr
while-expr  : keywordXD:DOPÓKI expr keywordXD:DOPÓTY expr
list-expr   : lsquareXD (expr (COMMA expr)*)? rsquareXD
